--- a/cal.html
+++ b/cal.html
@@ -46,7 +46,7 @@ function buttonClick(){
 </script>
 </head>
 <body>
-阈值：<input type="number" id="value" name="value" value=500 />
+阈值：<input type="number" id="value" name="value" value=500 style="width: 200px"/>
 <button type="button" onclick="buttonClick()">计算</button>
 <p id="container"></p>
 </body>
