--- a/movie.html
+++ b/movie.html
@@ -1,9 +1,12 @@
 <html>
+<head>
+<meta charset=utf-8 />
+</head>
 <body>
 <script>
-var map = {0: "ж╩спэ©ж╙╣юё║", 1: "╠╩╧Бв╔въ╣дхк", 2: "д╠и╠", 3: "до╥╫Ё╣у╬╣д╬ш╩А"};
+var map = {0: "Е▐╙Ф°┴Х┼╦Г÷╔И│⌠О╪│", 1: "Х╒╚Е┘┴Ф┼⌠Х╣╟Г └Д╨╨", 2: "Х╟▀Ф²─", 3: "Е█≈Ф√╧Х╫╕Г╚≥Г └Х│ Д╪ "};
 var random = Math.floor(Math.random() * 4);
-alert("ио╣шк╣р╙сп╧Бё╛сзйгспак╧Б║ёажажк╣р╙©╢╣Гс╟ё╛сзйгио╣ш╦ФкъкЩс╕╦цх╔©╢║╬" + map[random] + "║©");
+alert("Д╦┼Е╦²Х╞╢Х╕│Ф°┴Е┘┴О╪▄Д╨▌Ф≤╞Ф°┴Д╨├Е┘┴Ц─┌Ф·≈Ф·≈Х╞╢Х╕│Г°▀Г■╣Е╫╠О╪▄Д╨▌Ф≤╞Д╦┼Е╦²Е▒┼Х╞┴Е╔╧Е╨■Х╞╔Е▌╩Г°▀Ц─░" + map[random] + "Ц─▒");
 </script>
 </body>
 </html>
